// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`jsx-vue-directive > vue 2.7 v-for > ./fixtures/v-for/index.vue 1`] = `
"<script setup lang="tsx">
const map = new Map([
  [1, '2'],
  [3, '4'],
])
const set = new Set(['1', '2', '3'])
const object = { id: 1, name: 'admin' }
let selected = 0

defineRender(() => (
  <>
    {Array.from(4, (i) => <div key={i}>
      <div>{i}</div>
    </div>)}

    {Array.from(object, (value, key, index) => <div key={index}>
      {key}: {value}
    </div>)}

    {Array.from([1, 2, 3][Symbol.iterator](), (i, index) => <div key={index}>
      <div>{i}</div>
    </div>)}

    {Array.from([1, 2, 3], (i, __MACROS_index) => <div v-memo={[selected === i]} key={i}>
      <div>{i}</div>
    </div>)}

    {(set) ? Array.from(set, (i) => <div key={i}>
      <div>{i}</div>
    </div>) : null}

    {Array.from(map, ([key, value], index) => <div key={index}>
      {key}
      {Array.from(3, (key) => <div>
        {key}: {value}
      </div>)}
    </div>)}
  </>
))
</script>
"
`;

exports[`jsx-vue-directive > vue 3 v-for > ./fixtures/v-for/index.vue 1`] = `
"<script setup lang="tsx">
import { renderList as __MACROS_renderList } from "vue";
const map = new Map([
  [1, '2'],
  [3, '4'],
])
const set = new Set(['1', '2', '3'])
const object = { id: 1, name: 'admin' }
let selected = 0

defineRender(() => (
  <>
    {__MACROS_renderList(4, (i) => <div key={i}>
      <div>{i}</div>
    </div>)}

    {__MACROS_renderList(object, (value, key, index) => <div key={index}>
      {key}: {value}
    </div>)}

    {__MACROS_renderList([1, 2, 3][Symbol.iterator](), (i, index) => <div key={index}>
      <div>{i}</div>
    </div>)}

    {__MACROS_renderList([1, 2, 3], (i, __MACROS_index) => <div v-memo={[selected === i]} key={i}>
      <div>{i}</div>
    </div>)}

    {(set) ? __MACROS_renderList(set, (i) => <div key={i}>
      <div>{i}</div>
    </div>) : null}

    {__MACROS_renderList(map, ([key, value], index) => <div key={index}>
      {key}
      {__MACROS_renderList(3, (key) => <div>
        {key}: {value}
      </div>)}
    </div>)}
  </>
))
</script>
"
`;

exports[`jsx-vue-directive > vue/vapor v-for > ./fixtures/v-for/index.vue 1`] = `
"<script setup lang="tsx">
import { createFor as __MACROS_createFor } from "vue/vapor";
const map = new Map([
  [1, '2'],
  [3, '4'],
])
const set = new Set(['1', '2', '3'])
const object = { id: 1, name: 'admin' }
let selected = 0

defineRender(() => (
  <>
    {__MACROS_createFor(() => 4, (__MACROS_props) => <div>
      <div>{__MACROS_props[0].value}</div>
    </div>, ([i]) => (i))}

    {__MACROS_createFor(() => object, (__MACROS_props) => <div>
      {__MACROS_props[1].value}: {__MACROS_props[0].value}
    </div>, ([value, key, index]) => (index))}

    {__MACROS_createFor(() => [1, 2, 3][Symbol.iterator](), (__MACROS_props) => <div>
      <div>{__MACROS_props[0].value}</div>
    </div>, ([i, index]) => (index))}

    {__MACROS_createFor(() => [1, 2, 3], (__MACROS_props) => <div v-memo={[selected === __MACROS_props[0].value]}>
      <div>{__MACROS_props[0].value}</div>
    </div>, ([i, __MACROS_index]) => (i))}

    {(set) ? __MACROS_createFor(() => set, (__MACROS_props) => <div>
      <div>{__MACROS_props[0].value}</div>
    </div>, ([i]) => (i)) : null}

    {__MACROS_createFor(() => map, (__MACROS_props) => <div>
      {__MACROS_props[0].value[0].value}
      {__MACROS_createFor(() => 3, (__MACROS_props) => <div>
        {__MACROS_props[0].value}: {__MACROS_props[0].value[1].value}
      </div>)}
    </div>, ([[key, value], index]) => (index))}
  </>
))
</script>
"
`;
